# CryptoApp

./: CMakeLists.txt  README.md  main.cpp
config/: config.json
cryptopp/include/: CMakeLists.txt  build_cryptopp.bat
src/crypto/: CryptoManager.cpp  CryptoManager.h
src/gui/: MainWindow.cpp  MainWindow.h  mainwindow.ui
src/utils/: KeyUtils.cpp  KeyUtils.h  file_utils.cpp  file_utils.h
